--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="SleepApneaDiagnoser.Dialog_Add_Derivative"
+﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.Dialog_Add_Derivative"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
+        xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="Add Derivative" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
@@ -19,4 +20,4 @@
         <Button x:Name="button_Cancel" Content="Cancel" Margin="0,0,10,10" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" Click="button_Cancel_Click"/>
         <Button x:Name="button_OK" Content="OK" Margin="0,0,90,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="button_OK_Click"/>
     </Grid>
-</Window>
+</mtr:MetroWindow>
