--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Remove_Derivative.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Remove_Derivative.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="SleepApneaDiagnoser.Dialog_Remove_Derivative"
+﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.Dialog_Remove_Derivative"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
+        xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="Remove Derivative" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
@@ -15,4 +16,4 @@
         <Button x:Name="button_OK" Content="OK" Margin="0,0,89.667,10" HorizontalAlignment="Right" Width="75" Click="button_OK_Click" Height="20" VerticalAlignment="Bottom"/>
         <ListBox x:Name="listBox_DerivedSignals" SelectionMode="Multiple" Margin="10,49,9.667,35"/>
     </Grid>
-</Window>
+</mtr:MetroWindow>
