--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SleepApneaDiagnoser.MainWindow"
+﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,30 +7,22 @@
         xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
+        xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Sleep Apnea Diagnoser" Height="768" Width="1366">
-    <Grid>
+        Title="Sleep Apnea Diagnoser" Height="768" Width="1366" Closing="Window_Closing">
+    <Grid Margin="0,10,0,0">
 
-        <Menu x:Name="menu" Height="20" VerticalAlignment="Top" Grid.ColumnSpan="2">
-            <MenuItem Header="_File">
-                <MenuItem Header="_Open" Click="MenuItem_File_Open_Click"/>
-                <MenuItem Header="_Close" Click="MenuItem_File_Close_Click"/>
-                <MenuItem Header="_Exit" Click="MenuItem_File_Exit_Click"/>
-            </MenuItem>
-        </Menu>
+        <mtr:MetroAnimatedSingleRowTabControl Margin="10,10,10,30" TabStripPlacement="Left">
 
-        <TabControl Margin="10,30" TabStripPlacement="Left">
-
-            <TabItem Header="Home" Margin="-2,-2,0,-23">
-                <Grid>
+            <TabItem Header="Home">
+                <Grid Margin="27,0,0,0">
                     <Grid HorizontalAlignment="Left" Width="299" Background="White" Margin="0,0">
-                        <TextBlock Text="Sleep Apnea Diagnoser" FontSize="25" FontWeight="Bold" Margin="10,10,-47,0" HorizontalAlignment="Left" Width="336" Height="59" VerticalAlignment="Top"/>
-                        <TextBlock Text="Start" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18"  Margin="10,102,0,0"/>
-                        <TextBlock x:Name="TextBlock_OpenEDF" TextDecorations="Underline" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,136,0,0">
+                        <TextBlock Text="Start" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18"  Margin="10,15,0,0"/>
+                        <TextBlock x:Name="TextBlock_OpenEDF" TextDecorations="Underline" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,49,0,0">
                             <Hyperlink Click="TextBlock_OpenEDF_Click" FontSize="12"><Run Text="Open EDF..."/></Hyperlink>
                         </TextBlock>
-                        <TextBlock Text="Recent" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18" Margin="10,223,0,0"/>
-                        <ItemsControl Name="itemControl_RecentEDF" Foreground="Blue" BorderBrush="Transparent" Margin="10,257,10,15">
+                        <TextBlock Text="Recent" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18" Margin="10,136,0,0"/>
+                        <ItemsControl Name="itemControl_RecentEDF" Foreground="Blue" BorderBrush="Transparent" Margin="10,170,10,10">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock TextDecorations="Underline" HorizontalAlignment="Left"  Name="tb">
@@ -45,8 +37,8 @@
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Preview" Height="50" VerticalAlignment="Top" Margin="-2,23,0,-23">
-                <Grid>
+            <TabItem Header="Preview" >
+                <Grid Margin="27,0,0,0">
 
                     <Label Content="EDF Header" FontSize="18" Margin="0,10,222,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" HorizontalAlignment="Right" Width="114"/>
                     <Grid HorizontalAlignment="Right" Width="336" Margin="0,35,-0.333,26.667">
@@ -100,13 +92,13 @@
                     <Label Content="Plot" FontSize="18" HorizontalAlignment="Left" Margin="265,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" Width="47"/>
                     <Grid Height="38" Margin="265,52,373,0" VerticalAlignment="Top">
                         <Label Content="From" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47" HorizontalContentAlignment="Center"/>
-                        <xctk:DateTimeUpDown x:Name="timePicker_From_Abs" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_RangeChanged"/>
-                        <xctk:IntegerUpDown x:Name="timePicker_From_Eph" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="True" TextAlignment="Center" ValueChanged="timePicker_RangeChanged"/>
+                        <xctk:DateTimeUpDown x:Name="timePicker_From_Abs" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="False" TextAlignment="Center" Value="{Binding PreviewViewStartTime}" Maximum="{Binding PreviewViewStartTimeMax}" Minimum="{Binding PreviewViewStartTimeMin}" IsEnabled="{Binding PreviewNavigationEnabled}"/>
+                        <xctk:IntegerUpDown x:Name="timePicker_From_Eph" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="True" TextAlignment="Center" Value="{Binding PreviewViewStartRecord}" Maximum="{Binding PreviewViewStartRecordMax}" Minimum="{Binding PreviewViewStartRecordMin}" IsEnabled="{Binding PreviewNavigationEnabled}"/>
                         <Label Content="Length" Margin="262,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" HorizontalAlignment="Left" Width="62" HorizontalContentAlignment="Center"/>
-                        <xctk:IntegerUpDown x:Name="timePicker_Period" Margin="329,0,0,10" HorizontalAlignment="Left" Width="85" AllowTextInput="True" TextAlignment="Center" ValueChanged="timePicker_RangeChanged"/>
-                        <ToggleButton x:Name="toggleButton_UseAbsoluteTime" Content="Use Absolute Time" VerticalAlignment="Top" HorizontalAlignment="Right" Width="112" Height="28" Checked="toggleButton_UseAbsoluteTime_Checked" Unchecked="toggleButton_UseAbsoluteTime_Unchecked"/>
+                        <xctk:IntegerUpDown x:Name="timePicker_Period" Margin="329,0,0,10" HorizontalAlignment="Left" Width="85" AllowTextInput="True" TextAlignment="Center" Value="{Binding PreviewViewDuration}" Maximum="{Binding PreviewViewDurationMax}" Minimum="{Binding PreviewViewDurationMin}" IsEnabled="{Binding PreviewNavigationEnabled}"/>
+                        <ToggleButton x:Name="toggleButton_UseAbsoluteTime" Content="Use Absolute Time" VerticalAlignment="Top" HorizontalAlignment="Right" Width="112" Height="28" IsChecked="{Binding PreviewUseAbsoluteTime}" IsEnabled="{Binding PreviewNavigationEnabled}" Checked="toggleButton_UseAbsoluteTime_Checked" Unchecked="toggleButton_UseAbsoluteTime_Unchecked"/>
                     </Grid>
-                    <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,90,373,30"/>
+                    <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,90,373,30" Model="{Binding PreviewSignalPlot}"/>
                     <Button x:Name="button_AddDerivative" Content="Add Derivative" HorizontalAlignment="Left" Margin="10,0,0,46.667" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_AddDerivative_Click"/>
                     <Button x:Name="button_RemoveDerivative" Content="Remove Derivative" HorizontalAlignment="Left" Margin="10,0,0,9.667" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_RemoveDerivative_Click"/>
                     <Button x:Name="button_Categories" Content="Categories" HorizontalAlignment="Left" Margin="138,0,0,46.667" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_Categories_Click"/>
@@ -115,10 +107,10 @@
                 </Grid>
             </TabItem>
 
-        </TabControl>
+        </mtr:MetroAnimatedSingleRowTabControl>
 
         <StatusBar Height="25" VerticalAlignment="Bottom">
             <TextBlock x:Name="TextBlock_Status" Text="{Binding LoadedEDFFileName}"/>
         </StatusBar>
     </Grid>
-</Window>
+</mtr:MetroWindow>
