--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -43,19 +43,15 @@
                     <Label Content="EDF Header" FontSize="18" Margin="0,10,222,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" HorizontalAlignment="Right" Width="114"/>
                     <Grid HorizontalAlignment="Right" Width="336" Margin="0,35,-0.333,26.667">
                         <Label x:Name="label5" Content="General Information" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136" FontSize="14"/>
-                        <Grid Margin="10,31,10,0" Height="135" VerticalAlignment="Top">
+                        <Grid Margin="10,31,10,0" Height="77" VerticalAlignment="Top">
                             <Label Content="Start" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="60" FontSize="14"/>
                             <Label Content="End" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="60" FontSize="14"/>
-                            <Label Content="Rec. Prd." HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="60" FontSize="14"/>
-                            <Label Content="Num Rec." HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="75" FontSize="14"/>
                             <TextBox x:Name="textBox_StartTime" Height="23" Margin="90,13,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path=EDFStartTime, Mode=OneWay}" FontSize="14"/>
                             <TextBox x:Name="textBox_EndTime" Height="23" Margin="90,44,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path = EDFEndTime, Mode=OneWay}" FontSize="14"/>
-                            <TextBox x:Name="textBox_TimeRecord" Height="23" Margin="90,75,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path = EDFRecordDuration, Mode=OneWay}" FontSize="14"/>
-                            <TextBox x:Name="textBox_NumRecords" Height="23" Margin="90,106,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path = EDFNumRecords, Mode=OneWay}" FontSize="14"/>
                         </Grid>
 
-                        <Label Content="Patient Information" HorizontalAlignment="Left" Margin="10,171,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136" FontSize="14"/>
-                        <Grid Height="135" Margin="10,197,10,0" VerticalAlignment="Top">
+                        <Label Content="Patient Information" HorizontalAlignment="Left" Margin="10,113,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136" FontSize="14"/>
+                        <Grid Height="135" Margin="10,139,10,0" VerticalAlignment="Top">
                             <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="60" FontSize="14"/>
                             <Label Content="Sex" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="30" Width="60" FontSize="14"/>
                             <Label Content="Code" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="30" Width="60" FontSize="14"/>
@@ -66,8 +62,8 @@
                             <TextBox x:Name="textBox_PI_Birthdate" Height="23" Margin="90,107,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path = EDFPatientBirthDate, Mode=OneWay}" FontSize="14"/>
                         </Grid>
 
-                        <Label x:Name="label6" Content="Recording Information" HorizontalAlignment="Left" Margin="10,337,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="31" Width="148" FontSize="14"/>
-                        <Grid Height="108" Margin="10,358,10,0" VerticalAlignment="Top">
+                        <Label x:Name="label6" Content="Recording Information" HorizontalAlignment="Left" Margin="10,279,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="31" Width="148" FontSize="14"/>
+                        <Grid Height="108" Margin="10,310,10,0" VerticalAlignment="Top">
                             <Label Content="Equip." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="65" FontSize="14"/>
                             <Label Content="Code" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="30" Width="60" FontSize="14"/>
                             <Label Content="Tech." HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="30" Width="60" FontSize="14"/>
@@ -76,11 +72,11 @@
                             <TextBox x:Name="textBox_RI_Technician" Height="23" Margin="90,76,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding Path = EDFRecordTechnician, Mode=OneWay}" FontSize="14"/>
                         </Grid>
 
-                        <Label Content="Signal Information" HorizontalAlignment="Left" Margin="10,472,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="127" FontSize="14"/>
+                        <Label Content="Signal Information" HorizontalAlignment="Left" Margin="10,423,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="127" FontSize="14"/>
 
-                        <ComboBox x:Name="comboBox_SignalSelect" Height="23" VerticalAlignment="Top" Margin="147,475,21,0" SelectionChanged="comboBox_SignalSelect_SelectionChanged" ItemsSource="{Binding Path = EDFAllSignals, Mode=OneWay}" FontSize="14"/>
-                        <Label Content="Smp/Rec" HorizontalAlignment="Left" Margin="10,503,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="69" FontSize="14"/>
-                        <TextBox x:Name="textBox_SampRecord" Height="23" Margin="100,506,21,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14"/>
+                        <ComboBox x:Name="comboBox_SignalSelect" Height="23" VerticalAlignment="Top" Margin="142,423,26,0" SelectionChanged="comboBox_SignalSelect_SelectionChanged" ItemsSource="{Binding Path = EDFAllSignals, Mode=OneWay}" FontSize="14"/>
+                        <Label Content="Sample Rate" HorizontalAlignment="Left" Margin="10,457,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="97" FontSize="14"/>
+                        <TextBox x:Name="textBox_SampRecord" Height="23" Margin="112,460,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14"/>
 
                     </Grid>
 
