--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
@@ -1,4 +1,4 @@
-﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.Dialog_Add_Derivative"
+﻿<Dialog:CustomDialog x:Class="SleepApneaDiagnoser.Dialog_Add_Derivative"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,18 +6,19 @@
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Add Derivative" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
-    <Grid>
-        <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"           
+        Title="Add Derivative">
+    <Grid Height="180">
+        <TextBlock TextWrapping="WrapWithOverflow" VerticalAlignment="Top" Margin="0,0,20,0">
             Please select the two EEG signals you would like to subtract.
         </TextBlock>
-        <ComboBox x:Name="comboBox_Signal1" Margin="67,54,113,0" Height="21" VerticalAlignment="Top" SelectionChanged="comboBox_Signal1_SelectionChanged"/>
-        <Label Content="Signal 1" HorizontalAlignment="Left" Margin="10,49,0,0" VerticalAlignment="Top"/>
-        <Label Content="Signal 2" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="comboBox_Signal2" Margin="67,80,113,0" Height="21" VerticalAlignment="Top" SelectionChanged="comboBox_Signal2_SelectionChanged"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_SignalName" Height="23" Margin="67,109,10,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-        <Button x:Name="button_Cancel" Content="Cancel" Margin="0,0,10,10" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" Click="button_Cancel_Click"/>
-        <Button x:Name="button_OK" Content="OK" Margin="0,0,90,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="button_OK_Click"/>
+        <ComboBox x:Name="comboBox_Signal1" Margin="57,36,125,0" Height="20" VerticalAlignment="Top" SelectionChanged="comboBox_Signal1_SelectionChanged"/>
+        <Label Content="Signal 1" HorizontalAlignment="Left" Margin="0,36,0,0" VerticalAlignment="Top"/>
+        <Label Content="Signal 2" HorizontalAlignment="Left" Margin="0,66,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="comboBox_Signal2" Margin="57,66,125,0" Height="20" VerticalAlignment="Top" SelectionChanged="comboBox_Signal2_SelectionChanged"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="0,96,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox_SignalName" Height="20" Margin="57,96,125,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+        <Button x:Name="button_Cancel" Content="Cancel" Margin="0,0,10,10" HorizontalAlignment="Right" Width="75" VerticalAlignment="Bottom" Click="button_Cancel_Click"/>
+        <Button x:Name="button_OK" Content="OK" Margin="0,0,90,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="button_OK_Click"/>
     </Grid>
-</mtr:MetroWindow>
+</Dialog:CustomDialog>
