--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Hide_Signals.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Hide_Signals.xaml
@@ -1,4 +1,4 @@
-﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.Dialog_Hide_Signals"
+﻿<Dialog:CustomDialog x:Class="SleepApneaDiagnoser.Dialog_Hide_Signals"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,13 +6,14 @@
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Hide/Unhide Signals" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"    
+        Title="Hide/Unhide Signals">
     <Grid>
-        <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
+        <TextBlock TextWrapping="WrapWithOverflow" VerticalAlignment="Top" Margin="0,10,10,0">
             Please select the signals you would like to show in the signals selection pane.
         </TextBlock>
-        <ListBox x:Name="listBox_Signals" SelectionMode="Multiple" Margin="10,49,10,40"/>
-        <Button x:Name="button_Done" Content="Done" Margin="0,0,10,10" VerticalAlignment="Bottom" Height="20" RenderTransformOrigin="1.188,0.643" Click="button_Done_Click" HorizontalAlignment="Right" Width="64"/>
+        <ListBox x:Name="listBox_Signals" SelectionMode="Multiple" Margin="10,50,10,50" MaxHeight="200"/>
+        <Button x:Name="button_Done" Content="Done" Margin="0,0,10,10" VerticalAlignment="Bottom" RenderTransformOrigin="1.188,0.643" Click="button_Done_Click" HorizontalAlignment="Right" Width="64"/>
 
     </Grid>
-</mtr:MetroWindow>
+</Dialog:CustomDialog>
