--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Remove_Derivative.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Remove_Derivative.xaml
@@ -1,4 +1,4 @@
-﻿<mtr:MetroWindow x:Class="SleepApneaDiagnoser.Dialog_Remove_Derivative"
+﻿<Dialog:CustomDialog x:Class="SleepApneaDiagnoser.Dialog_Remove_Derivative"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,14 +6,15 @@
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Remove Derivative" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"    
+        Title="Remove Derivative">
     <Grid>
-        <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
+        <TextBlock TextWrapping="WrapWithOverflow" VerticalAlignment="Top" Margin="0,10,10,0">
             Please select the derivative(s) you would like to remove from the preview list.
         </TextBlock>
 
-        <Button x:Name="button_Cancel" Content="Cancel" Margin="0,0,10,10" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" Click="button_Cancel_Click"/>
-        <Button x:Name="button_OK" Content="OK" Margin="0,0,89.667,10" HorizontalAlignment="Right" Width="75" Click="button_OK_Click" Height="20" VerticalAlignment="Bottom"/>
-        <ListBox x:Name="listBox_DerivedSignals" SelectionMode="Multiple" Margin="10,49,9.667,35"/>
+        <Button x:Name="button_Cancel" Content="Cancel" Margin="0,0,10,10" HorizontalAlignment="Right" Width="75" VerticalAlignment="Bottom" Click="button_Cancel_Click"/>
+        <Button x:Name="button_OK" Content="OK" Margin="0,0,90,10" HorizontalAlignment="Right" Width="75" Click="button_OK_Click" VerticalAlignment="Bottom"/>
+        <ListBox x:Name="listBox_DerivedSignals" SelectionMode="Multiple" Margin="10,50,10,50" MaxHeight="200"/>
     </Grid>
-</mtr:MetroWindow>
+</Dialog:CustomDialog>
