--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Sleep Apnea Diagnoser" Height="768" Width="1366" Closing="Window_Closing">
+        Title="Sleep Apnea Diagnoser" Height="768" Width="1366" Closing="Window_Closing" WindowState="Maximized">
     <Grid Margin="0,10,0,0">
 
         <mtr:MetroAnimatedSingleRowTabControl Margin="10,10,10,30" TabStripPlacement="Left">
