--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -99,7 +99,9 @@
                         <xctk:IntegerUpDown x:Name="timePicker_Period" Margin="77,0,10,10" AllowTextInput="True" TextAlignment="Center" Value="{Binding PreviewViewDuration, Delay=300}" Maximum="{Binding PreviewViewDurationMax}" Minimum="{Binding PreviewViewDurationMin}" IsEnabled="{Binding PreviewNavigationEnabled}" FontSize="14" Grid.Column="1"/>
                         <ToggleButton x:Name="toggleButton_UseAbsoluteTime" Content="ABSOLUTE TIME" VerticalAlignment="Top" Height="28" IsChecked="{Binding PreviewUseAbsoluteTime}" IsEnabled="{Binding PreviewNavigationEnabled}" Checked="toggleButton_UseAbsoluteTime_Checked" Unchecked="toggleButton_UseAbsoluteTime_Unchecked" Grid.Column="2" Margin="5,0,0,0"/>
                     </Grid>
+
                     <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,90,341,10" Model="{Binding PreviewSignalPlot}"/>
+
                     <Button x:Name="button_HideSignals" Content="Hide/Unhide Signals" HorizontalAlignment="Left" Margin="10,0,0,84" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_HideSignals_Click" FontSize="10"/>
                     <Button x:Name="button_AddDerivative" Content="Add Derivative" HorizontalAlignment="Left" Margin="10,0,0,46.667" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_AddDerivative_Click" FontSize="10"/>
                     <Button x:Name="button_RemoveDerivative" Content="Remove Derivative" HorizontalAlignment="Left" Margin="10,0,0,9.667" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_RemoveDerivative_Click" FontSize="10"/>
@@ -111,14 +113,28 @@
             </mtr:MetroTabItem>
 
             <mtr:MetroTabItem Header="Analysis" IsEnabled="{Binding IsEDFLoaded}">
-                <mtr:MetroTabControl >
-                    <mtr:MetroTabItem Header="EEG" IsEnabled="{Binding IsEDFLoaded}" Margin="20,0,-20,0">
+                <mtr:MetroAnimatedSingleRowTabControl TabStripPlacement="Left">
+                    <mtr:MetroTabItem Header="Respiratory" IsEnabled="{Binding IsEDFLoaded}" Width="190">
+                        <Grid>
+                            <Label Content="From Binary File" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,10,0,0"/>
+                            <Button x:Name="button_RespLoadBin" Content="Open" Height="28" Width="122" Margin="215,10,707,645"/>
+                            
+                            <Label Content="From Loaded EDF File" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,47,0,0"/>
+                            <Label Content="Signal" HorizontalAlignment="Left" Margin="213,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47" HorizontalContentAlignment="Center" FontSize="14"/>
+                            <ComboBox Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="265,47,0,0" RenderTransformOrigin="1.025,1.5"/>
+                            <Label Content="From" HorizontalAlignment="Left" Margin="481,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47" HorizontalContentAlignment="Center" FontSize="14"/>
+                            <xctk:IntegerUpDown Margin="533,47,328,612" AllowTextInput="True" TextAlignment="Center" FontSize="14"/>
+                            <Label Content="Length" Margin="725,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" HorizontalContentAlignment="Center" FontSize="14" HorizontalAlignment="Left" Width="62"/>
+                            <xctk:IntegerUpDown Margin="792,47,145,612" AllowTextInput="True" TextAlignment="Center" FontSize="14"/>
+                            <Button Content="Go" VerticalAlignment="Top" Height="28" Margin="914,47,10,0"/>
+                            
+                            <oxy:PlotView x:Name="PlotView_RespPlot" Margin="10,87,350,10" Model="{Binding PreviewSignalPlot}"/>
+                        </Grid>
                     </mtr:MetroTabItem>
-                    <mtr:MetroTabItem Header="Respiratory" IsEnabled="{Binding IsEDFLoaded}" Margin="20,0,-20,0">
+                    <mtr:MetroTabItem Header="Circulatory" IsEnabled="{Binding IsEDFLoaded}" Width="190"/>
+                    <mtr:MetroTabItem Header="EEG" IsEnabled="{Binding IsEDFLoaded}" Width="190">
                     </mtr:MetroTabItem>
-                    <mtr:MetroTabItem Header="Circulatory" IsEnabled="{Binding IsEDFLoaded}" Margin="20,0,-20,0">
-                    </mtr:MetroTabItem>
-                </mtr:MetroTabControl>
+                </mtr:MetroAnimatedSingleRowTabControl>
             </mtr:MetroTabItem>
 
         </mtr:MetroAnimatedSingleRowTabControl>
